[package]

name = "osmmodels"
version = "0.0.1"
authors = ["Matthew Hall <matthew@quickbeam.me.uk>"]

[dependencies.osmxml]
git = "https://github.com/mattyhall/osmxml"

[dependencies.cgmath]
git = "https://github.com/bjz/cgmath-rs"

[dependencies.url]
git = "https://github.com/servo/rust-url"

[dependencies.http]
git = "https://github.com/chris-morgan/rust-http"
